--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body .card{
 }
 
 .card .front img{
-  position:center;
+  text-align:center;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -170,7 +170,7 @@ body .card{
 
 .RedesSociales{
   display: block;
-  position: center;
+  text-align: center;
   font-size: 100px;
   padding: 100%;
 }
