--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body{
     list-style: none;
 }
 
+
+
 p{
     font-family: 'Volkhov', serif;
     font-size: 16px;
@@ -24,6 +26,15 @@ p{
   height:500px;  
   text-align: center;
 }
+
+footer{
+  background: #8c9196;
+  position: absolute;
+  width: 100%;
+  text-align:center;
+  font-family: 'Lobster', cursive;
+}
+
 
 
 
@@ -73,7 +84,7 @@ body .card{
   height: 45px;
   line-height: 45px;
   color: #fff;
-  background: rgba(0, 0, 0, .4);
+  background: #00000066;
   text-align: center;
 }
 
@@ -171,7 +182,7 @@ body .card{
 .RedesSociales{
   display: block;
   text-align: center;
-  font-size: 100px;
+  font-size: 200px;
   padding: 100%;
 }
 
