--- a/css/style.css
+++ b/css/style.css
@@ -1,196 +1,192 @@
 /*selector universal*/
 *{
-    margin:0;
-    padding:0;
+  margin:0px;
+  box-sizing: border-box;
 }
 
 
 /*selector elemento*/
 body{
-    background-color: #D2F1EB;
-    list-style: none;
+  background-color: #D2F1EB;
+  list-style: none;
 }
+
 
 p{
-    font-family: 'Volkhov', serif;
-    font-size: 16px;
+  font-family: 'Volkhov', serif;
+  font-size: 16px;
 }
-
-.formulario{
-  font-size: 10px;
-}
-
 
 
 /*TARJETA 1 DE UNO DE LOS MENU*/
 body .card{
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+display: flex;
+align-items: center;
+flex-wrap: wrap;
 }
 
 
 .card{
-  position: relative;
-  width: 275px;
-  height: 480px;
-  margin: 20px 30px;
-  float: left;
+position: relative;
+width: 275px;
+height: 480px;
+margin: 20px 30px;
+float: left;
 }
 
 .card .face{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 10px;
-  overflow: hidden;
-  transition: 1.5s;
+position: absolute;
+width: 100%;
+height: 100%;
+backface-visibility: hidden;
+border-radius: 10px;
+overflow: hidden;
+transition: 1.5s;
 }
 
 /*TARJETA FRONTAL*/
 .card .front{
-  transform: perspective(600px) rotateY(0deg);
-  box-shadow: 0 5px 10px #000;
+transform: perspective(600px) rotateY(0deg);
+box-shadow: 0 5px 10px #000;
 }
 
 .card .front img{
-  position:center;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+position:center;
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
 .card .front h3{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 45px;
-  line-height: 45px;
-  color: #fff;
-  background: rgba(0, 0, 0, .4);
-  text-align: center;
+position: absolute;
+bottom: 0;
+width: 100%;
+height: 45px;
+line-height: 45px;
+color: #fff;
+background: rgba(0, 0, 0, .4);
+text-align: center;
 }
 
 /*PARTE DE ATRAS DE LA TARJETA*/
 .card .back {
-  transform: perspective(600px) rotateY(180deg);
-  background: #8c9196;
-  padding: 15px;
-  color: #f3f3f3;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
-  box-shadow: 0px 5px 10px #000;
-  list-style: none;
+transform: perspective(600px) rotateY(180deg);
+background: #8c9196;
+padding: 15px;
+color: #f3f3f3;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+text-align: center;
+box-shadow: 0px 5px 10px #000;
+list-style: none;
 }
 
 .card .back .link {
-  border-top: solid 1px #f3f3f3;
-  height: 50px;
-  line-height: 50px;
+border-top: solid 1px #f3f3f3;
+height: 50px;
+line-height: 50px;
 }
 
 .card .back .link a{
-  color: #f3f3f3;
+color: #f3f3f3;
 }
 
 .card .back h3 {
-  font-size: 25px;
-  margin-top: 20px;
-  letter-spacing: 2px;
+font-size: 25px;
+margin-top: 20px;
+letter-spacing: 2px;
 }
 
 .card .back p {
-  letter-spacing: 1px;
+letter-spacing: 1px;
 }
 
 /*EFECTO DE LA TARJETA*/
 .card:hover .front{
-  transform: perspective(600px) rotateY(180deg);
+transform: perspective(600px) rotateY(180deg);
 }
 
 .card:hover .back{
-  transform: perspective(600px) rotateY(360deg);
+transform: perspective(600px) rotateY(360deg);
 }
 /*AQUI TERMINA LA PRIMERA TARJETA*/
 
 
 .menunormal{
-  color: #000;
-  font-size: 30px;
-  text-align: center;
-  font-family: 'Lobster', cursive;
+color: #000;
+font-size: 30px;
+text-align: center;
+font-family: 'Lobster', cursive;
 
 }
 
 /*MENU HORIZONTAL*/
 .menu-horizontal{
-  width: 100%;
-  height: 58px;
-  background: #8c9196;
-  font-size: 10px;
+width: 100%;
+height: 58px;
+background: #8c9196;
+font-size: 10px;
 }
 
 .menu-horizontal > li > a{
-  display: block;
-  padding: 25px 50px;
-  font-size: 10px;
-  color: white;
-  text-decoration: none;
+display: block;
+padding: 25px 50px;
+font-size: 10px;
+color: white;
+text-decoration: none;
 }
 
- /*MENU VERTICAL*/
+/*MENU VERTICAL*/
 .menu-vertical{
-  position: absolute;
-  display: none;
-  list-style: none;
-  width: 130px;
-  background-color: #8c9196;
-  text-align: center;
-  font-size: 20px;
+position: absolute;
+display: none;
+list-style: none;
+width: 130px;
+background-color: #8c9196;
+text-align: center;
+font-size: 20px;
 }
 .menu-horizontal li:hover .menu-vertical{
-  display: block;
+display: block;
 }
 .menu-vertical li:hover{
-  background-color: #D2F1EB;
+background-color: #D2F1EB;
 }
 .menu-vertical li a{
-  display: block;
-  color: white;
-  padding: 15px 20px 15px 20px;
+display: block;
+color: white;
+padding: 15px 20px 15px 20px;
 }
 
 .RedesSociales{
-  display: block;
-  position: center;
-  font-size: 100px;
-  padding: 100%;
+display: block;
+position: center;
+font-size: 100px;
+padding: 100%;
 }
 
 input[type="text"], input[type="email"], textarea {
-  background-color: #8c9196;
-  border: 1px solid #8c9196;
-  color: #000000;
-  display: inline-block;
-  padding: 10px;
-  width: 32%;
-  font-size: 1.2em;
-  margin-bottom: 1%;
+background-color: #8c9196;
+border: 1px solid #8c9196;
+color: #000000;
+display: inline-block;
+padding: 10px;
+width: 100%;
+font-size: 1.2em;
+margin-bottom: 1%;
 }
 input[name="name"] {
-  background-color: #8c9196;
-  width: 100%;
+background-color: #8c9196;
+width: 100%;
 }
 input[name="email"] {
-  background-color: #8c9196;
-  width: 60%;
+background-color: #8c9196;
+width: 60%;
 }
 input[name="phone"] {
-  background-color: #8c9196;
-  width: 36%;
+background-color: #8c9196;
+width: 36%;
 }
 
 
@@ -198,119 +194,258 @@ input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover
 {
-  background: #f0f0f0;
-  color: #333;
+background: #f0f0f0;
+color: #333;
 
 }
 
 input[type="button"], input[type="reset"], input[type="submit"] {
-  background: #626466;
-  border: medium none;
-  color: #fff;
-  outline: medium none;
-  padding: 8px 0;
-  transition: all 0.5s ease 0s;
-  width: 18%;
-  font-size: 1.4em;
-  border-radius: 4px;  
-  cursor: pointer;
+background: #626466;
+border: medium none;
+color: #fff;
+outline: medium none;
+padding: 8px 0;
+transition: all 0.5s ease 0s;
+width: 18%;
+font-size: 1.4em;
+border-radius: 4px;  
+cursor: pointer;
 }
 
 textarea {
-  display: block;
-  min-height: 150px;
-  resize: none;
-  width: 100%;
-  overflow: auto;
+display: block;
+min-height: 150px;
+resize: none;
+width: 100%;
+overflow: auto;
 }
 input::placeholder,textarea::placeholder {
-  color: #000000cc;
-  font: italic 18px serif;
-}
-
-form {   
-  width: 100%;
-}
-main {
-  max-width: 800px;
-  width: 90%;
-  min-height: 1px;
-  margin: auto;
+color: #000000cc;
+font: italic 18px serif;
 }
 
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    background: #8c9196;
-    display: block;
-    color: #ffffff;
-    text-align: center;
-    padding: 10px 10px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background: #aaafae;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  background: #8c9196;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background: #aaafae;
+}
 
 
 
-  header { 
-    width: 100%;
-    padding: center;
-    color: #8c9196;
-    text-align: center;
-    font-size: 17.1px;
-  }
+header { 
+  width: 100%;
+  padding: center;
+  color: #8c9196;
+  text-align: center;
+  font-size: 17.1px;
+}
 
 nav ul { 
-  list-style: none;
+list-style: none;
 
 }
 nav ul li {
-  display: inline-block;
-  padding: 0px;
+display: inline-block;
+padding: 0px;
 }
 
 @media only screen and (max-width: 5px){
-  ul li{
-    width: 100%;
-    padding: 10px;
-    text-align: left;
-  }}
+ul li{
+  width: 100%;
+  padding: 10px;
+  text-align: left;
+}}
 
- img {
-    max-width: 100%;
-    max-height: 100%;
-   }
+img {
+  max-width: 100%;
+  max-height: 100%;
+ }
 
 .titulo{
-  text-align: center;
-  font-size: 30px;
-  font-family:sans-serif ;}
+text-align: center;
+font-size: 30px;
+font-family:sans-serif ;}
 
 .parrafo{
-  text-align:center;
-  font-size: 200px;
-  font-style: sans-serif;
-  font-weight: bold;
+text-align:center;
+font-size: 200px;
+font-style: sans-serif;
+font-weight: bold;
 }
 
 .eleccion {
-  font-size: 20px;
+font-size: 20px;
 }
 
+main {
+	max-width: 800px;
+	width: 90%;
+	margin: auto;
+	padding: 40px;
+}
 
+.formulario {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
 
+.formulario__label {
+	display: block;
+	font-weight: 700;
+	padding: 10px;
+	cursor: pointer;
+}
 
+.formulario__grupo-input {
+	position: relative;
+}
 
+.formulario__input {
+	width: 100%;
+	background: #fff;
+	border: 3px solid transparent;
+	border-radius: 3px;
+	height: 45px;
+	line-height: 100%;
+	padding: 0 40px 0 10px;
+	transition: .3s ease all;
+}
+
+.formulario__input:focus {
+	border: 3px solid #0075FF;
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+
+.formulario__input-error {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+
+.formulario__input-error-activo {
+	display: block;
+}
+
+.formulario__validacion-estado {
+	position: absolute;
+	right: 10px;
+	bottom: 15px;
+	z-index: 100;
+	font-size: 16px;
+	opacity: 0;
+}
+
+.formulario__checkbox {
+	margin-right: 10px;
+}
+
+.formulario__grupo-terminos, 
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+	grid-column: span 2;
+}
+
+.formulario__mensaje {
+	height: 45px;
+	line-height: 45px;
+	background: #F66060;
+	padding: 0 15px;
+	border-radius: 3px;
+	display: none;
+}
+
+.formulario__mensaje-activo {
+	display: block;
+}
+
+.formulario__mensaje p {
+	margin: 0;
+}
+
+.formulario__grupo-btn-enviar {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.formulario__btn {
+	height: 45px;
+	line-height: 45px;
+	width: 30%;
+	background: #000;
+	color: #fff;
+	font-weight: bold;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	transition: .1s ease all;
+}
+
+.formulario__btn:hover {
+	box-shadow: 3px 0px 30px rgba(163,163,163, 1);
+}
+
+.formulario__mensaje-exito {
+	font-size: 14px;
+	color: #119200;
+	display: none;
+}
+
+.formulario__mensaje-exito-activo {
+	display: block;
+}
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+	color: #1ed12d;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+	color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+	color: #bb2929;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+	border: 3px solid #bb2929;
+}
+
+@media screen and (max-width: 800px) {
+	.formulario {
+		grid-template-columns: 1fr;
+	}
+
+	.formulario__grupo-terminos, 
+	.formulario__mensaje,
+	.formulario__grupo-btn-enviar {
+		grid-column: 1;
+	}
+
+	.formulario__btn {
+		width: 100%;
+	}
+}
