--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body{
   list-style: none;
 }
 
+.inicioseccion{
+	margin-top: -35px;
+	height: 50px;
+	margin-right: -850px;
+}
 
 p{
   font-family: 'Volkhov', serif;
@@ -38,8 +43,8 @@ footer{
 
 
 .container-fluid{
-  display: flex;
   margin-top: 8px;
+  right: -300px;
 }
 
 /*TARJETA 1 DE UNO DE LOS MENU*/
