--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ p{
 }
 
 .buttonR{
-	background: #626466;
+	background: #000000;
 	text-decoration: #f0f0f0;
 }
 
@@ -169,7 +169,7 @@ font-family: 'Lobster', cursive;
 width: 100%;
 height: 58px;
 background: #8c9196;
-font-size: 10px;
+font-size: 10%;
 }
 
 .menu-horizontal > li > a{
@@ -187,8 +187,8 @@ display: none;
 list-style: none;
 width: 130px;
 background-color: #8c9196;
-text-align: center;
-font-size: 20px;
+text-align: left;
+font-size: 18px;
 }
 .menu-horizontal li:hover .menu-vertical{
 display: block;
@@ -396,7 +396,7 @@ main {
 .formulario__validacion-estado {
 	position: absolute;
 	right: 10px;
-	bottom: 15px;
+	bottom: 100%;
 	z-index: 100;
 	font-size: 16px;
 	opacity: 0;
@@ -436,20 +436,22 @@ main {
 }
 
 .formulario__btn {
-	height: 45px;
-	line-height: 45px;
-	width: 30%;
-	background: #000;
-	color: #fff;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	height: 40px;
+	line-height: 100%;
+	width: 100%;
+	background: #000000;
+	color: rgb(255, 255, 255);
 	font-weight: bold;
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
 	transition: .1s ease all;
+	font-size: 20px;
 }
 
 .formulario__btn:hover {
-	box-shadow: 3px 0px 30px rgba(163,163,163, 1);
+	box-shadow: 3px 0px 30px rgb(0, 0, 0);
 }
 
 .formulario__mensaje-exito {
@@ -494,4 +496,17 @@ main {
 	.formulario__btn {
 		width: 100%;
 	}
+}
+
+.boton{
+	height: 100%;
+	line-height: 100%;
+	width: 100%;
+	background: #000;
+	color: #fff;
+	font-weight: bold;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	transition: .1s ease all;
 }
