--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ button{
 
 p{
   font-family: 'Volkhov', serif;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .buttonR{
@@ -52,6 +52,12 @@ footer{
   float: right;
 }
 
+.container{
+	width: 100%;
+	background-color: #c3c6c5;
+	margin-top: 40px;
+	padding: 50px;
+}
 
 .container-fluid{
   margin-top: 10px;
@@ -71,10 +77,11 @@ flex-wrap: wrap;
 
 .card{
 position: relative;
-width: 275px;
-height: 480px;
-margin: 20px 30px;
+width: 280px;
+height: 500px;
+margin: 20px 40px;
 float: left;
+text-align: center;
 }
 
 .card .face{
@@ -107,15 +114,16 @@ width: 100%;
 height: 45px;
 line-height: 45px;
 color: #fff;
-background: rgba(0, 0, 0, .4);
+background: #00000066;
 text-align: center;
+font-size:16px;
 }
 
 /*PARTE DE ATRAS DE LA TARJETA*/
 .card .back {
 transform: perspective(600px) rotateY(180deg);
 background: #8c9196;
-padding: 15px;
+padding: 20px;
 color: #f3f3f3;
 display: flex;
 flex-direction: column;
@@ -123,6 +131,7 @@ justify-content: space-between;
 text-align: center;
 box-shadow: 0px 5px 10px #000;
 list-style: none;
+text-align: center;
 }
 
 .card .back .link {
@@ -136,7 +145,7 @@ color: #f3f3f3;
 }
 
 .card .back h3 {
-font-size: 25px;
+font-size: 20px;
 margin-top: 20px;
 letter-spacing: 2px;
 }
@@ -351,8 +360,6 @@ main {
 
 .formulario {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 20px;
 }
 
 .formulario__label {
@@ -380,7 +387,7 @@ main {
 .formulario__input:focus {
 	border: 3px solid #0075FF;
 	outline: none;
-	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+	box-shadow: 3px 0px 30px #a3a3a366;
 }
 
 .formulario__input-error {
@@ -451,7 +458,7 @@ main {
 }
 
 .formulario__btn:hover {
-	box-shadow: 3px 0px 30px rgb(0, 0, 0);
+	box-shadow: 3px 0px 30px #000000;
 }
 
 .formulario__mensaje-exito {
@@ -510,3 +517,14 @@ main {
 	cursor: pointer;
 	transition: .1s ease all;
 }
+
+
+
+
+
+
+
+
+
+
+
