--- a/css/style.css
+++ b/css/style.css
@@ -51,22 +51,30 @@ footer{
   margin-top: 80px;
   text-decoration: none;
   float: right;
+  margin-top: 10px;
+  padding: 20px;
 }
 
 .container{
-	width: 100%;
 	background-color: #c3c6c5;
-	margin-top: 40px;
-	padding: 50px;
+	max-width: 900px;
+	width: 90%;
+	margin: auto;
+	padding: 30px;
+	position: center;
+}
+
+panel-heading{
+	position: center;
 }
 
 .container1{
-	padding: 120px 180px;
+	padding: 10px 100px;
 }
 
 .container2{
 	width: 100%;
-	background-color: #D2F1EB;
+	background-color: #c3c6c5;
 	margin-top: 40px;
 	padding: 50px;
 }
@@ -92,6 +100,7 @@ height: 500px;
 margin: 20px 40px;
 float: left;
 text-align: center;
+background-color: #D2F1EB;
 }
 
 .card .face{
@@ -175,51 +184,6 @@ transform: perspective(600px) rotateY(360deg);
 /*AQUI TERMINA LA PRIMERA TARJETA*/
 
 
-.menunormal{
-color: #000;
-font-size: 30px;
-text-align: center;
-font-family: 'Lobster', cursive;
-
-}
-
-/*MENU HORIZONTAL*/
-.menu-horizontal{
-width: 100%;
-height: 58px;
-background: #8c9196;
-font-size: 10%;
-}
-
-.menu-horizontal > li > a{
-display: block;
-padding: 25px 50px;
-font-size: 10px;
-color: white;
-text-decoration: none;
-}
-
-/*MENU VERTICAL*/
-.menu-vertical{
-position: absolute;
-display: none;
-list-style: none;
-width: 130px;
-background-color: #8c9196;
-text-align: left;
-font-size: 18px;
-}
-.menu-horizontal li:hover .menu-vertical{
-display: block;
-}
-.menu-vertical li:hover{
-background-color: #D2F1EB;
-}
-.menu-vertical li a{
-display: block;
-color: white;
-padding: 15px 20px 15px 20px;
-}
 
 .RedesSociales{
 display: block;
@@ -367,10 +331,10 @@ font-size: 20px;
 }
 
 main {
-	max-width: 800px;
+	max-width: 900px;
 	width: 90%;
 	margin: auto;
-	padding: 40px;
+	padding: 30px;
 }
 
 .formulario {
