--- a/Polls/templates/polls/InicioSeccion.html
+++ b/Polls/templates/polls/InicioSeccion.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-    <title>Reserva</title>
+    <title>Reservas</title>
 </head>
 <body>
     <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
