--- a/Restaurante-Web/polls/templates/polls/Registrar.html
+++ b/Restaurante-Web/polls/templates/polls/Registrar.html
@@ -120,7 +120,7 @@
                         <br>
                   </form>
                   <br>
-                  <a href="InicioSeccion.html"><button class="formulario__btn">Iniciar Seccion</button></a>
+                  <a href="{% url 'InicioSeccion' %}"><button class="formulario__btn">Iniciar Seccion</button></a>
                 </div>    
                 </main>	
             <script src="js/formulario.js"></script>
