--- a/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
+++ b/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="{% static 'polls/css/style.css' %}">
-    <title>Formulario Comida</title>
+    <title>Modificar Comida</title>
     
 </head>
 <body>
     <div class="row">
-        <form action="" method="POST" id="formulario">
-            {% csrf_token %}
-            <div class="form-group">
-                {{form.as_table}}
-            </div>
-            <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
-            <input type="reset" class="btn btn-primary" id="limpiar" value="Limpiar">
-            <div class="alert alert-succes" role="alert">
-                {{mensaje}}
-            </div>
-        </form>
-    </div>
+      <form action="" method="POST" id="formulario">
+          {% csrf_token %}
+          <div class="form-group">
+              {{form.as_table}}
+          </div>
+          <input type="submit" class="btn btn-primary" id="enviar" value="Modificar">
+          <input type="rest" class="btn btn-danger" id="limpiar" value="Limpiar">
+          <div class="alert alert-succes" role="alert">
+              {{mensaje}}
+          </div>
+      </form>
+  </div>
 </body>
 </html>
