--- a/Restaurante-Web/polls/templates/polls/Form_Comida.html
+++ b/Restaurante-Web/polls/templates/polls/Form_Comida.html
@@ -12,12 +12,16 @@
     
 </head>
 <body>
+    <div class="container1"></div>
+    <div class="container">
     <div class="row">
         <form action="" method="POST" id="formulario">
             {% csrf_token %}
             <div class="form-group">
                 {{form.as_table}}
             </div>
+            <br>
+            <br>
             <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
             <input type="reset" class="btn btn-primary" id="limpiar" value="Limpiar">
             <div class="alert alert-succes" role="alert">
@@ -25,5 +29,7 @@
             </div>
         </form>
     </div>
+</div>
+</div>
 </body>
 </html>
