--- a/Restaurante-Web/polls/templates/polls/Form_Comida.html
+++ b/Restaurante-Web/polls/templates/polls/Form_Comida.html
@@ -28,6 +28,7 @@
                 {{mensaje}}
             </div>
         </form>
+        <a href="{% url 'Platos'%}">Volver</a>
     </div>
 </div>
 </div>
