--- a/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
+++ b/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
@@ -12,6 +12,8 @@
     
 </head>
 <body>
+    <div class="container1">
+    <div class="container">
     <div class="row">
       <form action="" method="POST" id="formulario">
           {% csrf_token %}
@@ -25,5 +27,7 @@
           </div>
       </form>
   </div>
+    </div>
+    </div>
 </body>
 </html>
