--- a/Restaurante-Web/polls/templates/polls/Platos.html
+++ b/Restaurante-Web/polls/templates/polls/Platos.html
@@ -24,7 +24,7 @@
             </tr>
 
 
-            {% for c in comidas%}
+            {% for c in comida%}
             <tr>
                 <td>{{c.precio}}</td>
                 <td>{{c.plato}}</td>
