--- a/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
+++ b/Restaurante-Web/polls/templates/polls/Modificar_Comida.html
@@ -26,6 +26,7 @@
               {{mensaje}}
           </div>
       </form>
+      <a href="{% url 'Platos'%}">Volver</a>
   </div>
     </div>
     </div>
