--- a/Restaurante-Web/polls/static/polls/css/style.css
+++ b/Restaurante-Web/polls/static/polls/css/style.css
@@ -13,6 +13,19 @@ body{
 }
 
 
+#table1 th{
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: #00ff62;
+		color: #000000;
+}
+
+
+
+
+
+
 
 .inicioseccion{
 	margin-top: 10px;
