--- a/Restaurante-Web/polls/templates/polls/Platos.html
+++ b/Restaurante-Web/polls/templates/polls/Platos.html
@@ -5,16 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'polls/css/style.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'polls/css/style.css' %}">
     <title>Platos</title>
     
 </head>
 <body>
-
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menus
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                    <li><a class="dropdown-item" href="{% url 'MenuVegetariano' %}">Menu vegetariano</a></li>
+                    <li><a class="dropdown-item" href="{% url 'MenuNormal' %}">Menu Normal</a></li>
+                    <li><a class="dropdown-item" href="{% url 'Platos' %}">Agregar Platos</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'Contacto' %}">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'Reserva' %}">Reserva</a>
+                </li>
+              </ul>
+              <nav class="inicioseccion">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar' %}"><img src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
+            </nav>
+            </div>
+          </div>
+        </nav>
+      </header>
 <div class="container1">
     <div class="container">
-        <table border="1">
+        <table class="table table-bordered" id="table1" border="1" >
             <tr>
                 <th>Precio</th>
                 <th>Plato</th>
@@ -29,15 +64,42 @@
                 <td>{{c.precio}}</td>
                 <td>{{c.plato}}</td>
                 <td>{{c.tipo}}</td>
-                <td><a href="{% url 'Modificar_Comida' c.precio %}">Modificar</a></td>
-                <td><a href="{% url 'Eliminar_Comida' c.precio %}">Eliminar</a></td>
+                <td><a href="{% url 'Modificar_Comida' c.precio %}"><img src="{% static 'polls/img/icons8-modify-24.png' %}" alt=""></a></td>
+                <td><a href="{% url 'Eliminar_Comida' c.precio %}"><img src="{% static 'polls/img/icons8-eliminar-24.png' %}" alt=""></a></td>
             </tr>
             {% endfor %}
-</table>
+        </table>
 
         <hr>
-        <a href="{% url 'Form_Comida'%}">Agregar Plato</a>
+        <a href="{% url 'Form_Comida'%}"><img src="{% static 'polls/img/icons8-añadir-50.png' %}" alt=""></a>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<section>
+    <br>
+    <footer>
+      <nav id="RedesSociales">
+        <br>
+        <h4>Redes Sociales</h4>
+        <br>
+        <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.instagram.com/"><img
+              src="{% static 'polls/img/icons8-instagram-48.png' %}" alt=""></a></button>
+        <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.facebook.com/"><img
+              src="{% static 'polls/img/icons8-facebook-48.png' %}" alt=""></a></button>
+        <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.twitter.com/"><img
+              src="{% static 'polls/img/icons8-twitter-48.png' %}" alt=""></a></button>
+        <button class="btn btn-outline-success my-2 my-sm-0"><a
+            href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><img
+              src="{% static 'polls/img/icons8-google-maps-48.png' %}" alt=""></a></button>
+      </nav>
+    </footer>
+  </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
