--- a/Restaurante-Web/polls/templates/polls/Reserva.html
+++ b/Restaurante-Web/polls/templates/polls/Reserva.html
@@ -37,6 +37,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                     <li><a class="dropdown-item" href="{% url 'MenuVegetariano' %}">Menu vegetariano</a></li>
                     <li><a class="dropdown-item" href="{% url 'MenuNormal' %}">Menu Normal</a></li>
+                    <li><a class="dropdown-item" href="{% url 'Platos' %}">Agregar Platos</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
