--- a/Restaurante-Web/polls/templates/polls/Platos.html
+++ b/Restaurante-Web/polls/templates/polls/Platos.html
@@ -52,7 +52,7 @@
         <table class="table table-bordered" id="table1" border="1" >
             <tr>
                 <th>Precio</th>
-                <th>Plato</th>
+                <th>Nombre</th>
                 <th>Tipo</th>
                 <th>Modificar</th>
                 <th>Eliminar</th>
