--- a/Restaurante/Polls/templates/Polls/Platos.html
+++ b/Restaurante/Polls/templates/Polls/Platos.html
@@ -66,8 +66,8 @@
                 <td>{{c.precio}}</td>
                 <td>{{c.nombre}}</td>
                 <td>{{c.caracteristica}}</td>
-                <td><a href="{% url 'Modificar_Comida' c.precio %}"><img src="{% static 'polls/img/icons8-modify-24.png' %}" alt=""></a></td>
-                <td><a href="{% url 'Eliminar_Comida' c.precio %}"><img src="{% static 'polls/img/icons8-eliminar-24.png' %}" alt=""></a></td>
+                <td><a href="{% url 'Modificar_Comida' c.idPlato %}"><img src="{% static 'polls/img/icons8-modify-24.png' %}" alt=""></a></td>
+                <td><a href="{% url 'Eliminar_Comida' c.idPlato %}"><img src="{% static 'polls/img/icons8-eliminar-24.png' %}" alt=""></a></td>
             </tr>
             {% endfor %}
         </table>
