--- a/Restaurante/Polls/templates/Polls/index.html
+++ b/Restaurante/Polls/templates/Polls/index.html
@@ -86,22 +86,28 @@
           <div class="carousel-item active" data-bs-interval="10000">
             <img src="{% static 'polls/img/promo1.jpg' %}" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
-              <h5>FPromocion 1</h5>
+              <div class="container3">
+              <h5>Promocion 1</h5>
               <p>Papas fritas con pollo y ensalada a eleccion.</p>
+              </div>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
             <img src="{% static 'polls/img/promo2.jpg' %}" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
+              <div class="container3">
               <h5>Promocion 2</h5>
               <p>Una hamburgueza con papas fritas y un vaso de bebida</p>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img src="{% static 'polls/img/promo3.jpg' %}" class="d-block w-100" alt="">
             <div class="carousel-caption d-none d-md-block">
+              <div class="container3">
               <h5>Promocion 3</h5>
               <p>dos hamburguezas con papas fritas</p>
+              </div>
             </div>
           </div>
         </div>
