--- a/Restaurante/Polls/templates/Polls/MenuNormal.html
+++ b/Restaurante/Polls/templates/Polls/MenuNormal.html
@@ -46,6 +46,10 @@
                   <a class="nav-link" href="{% url 'Reserva' %}">Reserva</a>
                 </li>
               </ul>
+              <nav class="carrito">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'MenuNormal'%}"><img
+                      src="{% static 'polls/img/carrito.png' %}" alt=""></a></button>
+              </nav>
               <nav class="inicioseccion">
                 <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar' %}"><img src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
             </nav>
@@ -78,6 +82,9 @@
                 </p>
                 <div class="link">
                     <a href="#">VALOR: 3.000</a>
+                    <div class="agregar">
+                        <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                        </div>
                 </div>
             </div>
         </div>
@@ -96,6 +103,9 @@
                 </p>
                 <div class="link">
                     <a href="#">VALOR: 3.500</a>
+                    <div class="agregar">
+                        <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                        </div>
                 </div>
             </div>
         </div> 
@@ -113,6 +123,9 @@
                 </p>
                 <div class="link">
                     <a href="#">VALOR: 3.000</a>
+                    <div class="agregar">
+                        <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                        </div>
                 </div>
             </div>
         </div> 
@@ -133,6 +146,9 @@
                 </p>
                 <div class="link">
                     <a href="#">VALOR: 6.990</a>
+                    <div class="agregar">
+                        <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                        </div>
                 </div>
             </div>
         </div>
