--- a/Restaurante/Polls/templates/Polls/MenuVegetariano.html
+++ b/Restaurante/Polls/templates/Polls/MenuVegetariano.html
@@ -45,6 +45,10 @@
                   <a class="nav-link" href="{% url 'Reserva' %}">Reserva</a>
                 </li>
               </ul>
+              <nav class="carrito">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'MenuVegetariano'%}"><img
+                      src="{% static 'polls/img/carrito.png' %}" alt=""></a></button>
+              </nav>
               <nav class="inicioseccion">
                 <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar' %}"><img src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
             </nav>
@@ -79,6 +83,9 @@
             </p>
             <div class="link">
                 <a href="#">Valor: $3.500</a>
+                <div class="agregar">
+                <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                </div>
             </div>
         </div>
     </div>
@@ -96,6 +103,9 @@
             </p>
             <div class="link">
                 <a href="#">VALOR: 3.500</a>
+                <div class="agregar">
+                    <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                    </div>
             </div>
         </div>
     </div> 
@@ -116,6 +126,9 @@
             </p>
             <div class="link">
                 <a href="#">VALOR: 3.500</a>
+                <div class="agregar">
+                    <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                    </div>
             </div>
         </div>
     </div> 
@@ -131,11 +144,12 @@
                 <p>• 1 taza (8 onzas) de calabaza en daditos</p>
                 <p>• 1 cucharada de aceite de oliva</p>
                 <p>• 1 cebolla pequeña, cortada finamente</p>
-                <p>• 1 diente de ajo, cortado finamente</p>
-
             </p>
             <div class="link">
                  <a href="#">VALOR: 3.500</a>
+                 <div class="agregar">
+                    <button class="btn btn-primary añadir"><img src="{% static 'Polls/img/icons8-añadir-48.png' %}" alt=""></button>
+                    </div>
             </div>
         </div>
     </div>
