--- a/Restaurante/Polls/static/Polls/css/style.css
+++ b/Restaurante/Polls/static/Polls/css/style.css
@@ -44,7 +44,22 @@ a{
 	list-style: none;
 }
 
+.carrito{
+	margin-top: 10px;
+	height: 60px;
+	margin-right: 10px;
+}
 
+.añadir{
+	margin-top: 5px;
+	margin-right: 5px;
+	
+}
+
+.agregar{
+	text-align: center;
+	height: 50px;
+}
 
 .inicioseccion{
 	margin-top: 10px;
@@ -179,9 +194,9 @@ transform: perspective(600px) rotateY(180deg);
 background: #8c9196;
 padding: 20px;
 color: #f3f3f3;
-display: flex;
+align-content: center
 flex-direction: column;
-justify-content: space-between;
+justify-content: space-around;
 text-align: center;
 box-shadow: 0px 5px 10px #000;
 list-style: none;
