--- a/Restaurante/Polls/templates/Polls/Modificar_Comida.html
+++ b/Restaurante/Polls/templates/Polls/Modificar_Comida.html
@@ -53,7 +53,7 @@
       <form action="" method="POST" id="formulario">
           {% csrf_token %}
           <div class="form-group">
-              {{form.as_table}}
+              {{form.as_p}}
           </div>
           <br>
           <br>
