--- a/Restaurante/Polls/templates/Polls/Registrar.html
+++ b/Restaurante/Polls/templates/Polls/Registrar.html
@@ -122,14 +122,14 @@
                         <br>
                   </form>
                   <br>
-                  <a href="{% url 'InicioSeccion' %}"><button class="formulario__btn">Iniciar Seccion</button></a>
+                  <a href="{% url 'InicioSeccion' %}"><button class="formulario__btn">Iniciar Sesion</button></a>
                   <div class="g-sign-in-button">
                     <div class=content-wrapper>
                         <div class="logo-wrapper">
                             <img src="{% static 'Polls/img/icons8-logo-de-google-48.png' %}">
                         </div>
                         <span class='text-container'>
-                        <span><a href="{% provider_login_url 'google' %}">Sign in with Google</a></span>
+                        <span><a href="{% provider_login_url 'google' %}">Iniciar Sesion</a></span>
                     </span>
                     </div>
                 </div>
