--- a/Restaurante/Polls/static/Polls/css/style.css
+++ b/Restaurante/Polls/static/Polls/css/style.css
@@ -1,4 +1,5 @@
 /*selector universal*/
+
 *{
   margin:0px;
   box-sizing: border-box;
@@ -194,7 +195,7 @@ transform: perspective(600px) rotateY(180deg);
 background: #8c9196;
 padding: 20px;
 color: #f3f3f3;
-align-content: center
+align-content: center;
 flex-direction: column;
 justify-content: space-around;
 text-align: center;
@@ -661,3 +662,145 @@ main {
 }
 
 
+input ::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+input ::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+input :-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+input:focus {
+    outline: 0 transparent solid;
+}
+
+input:focus ::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+input:focus ::-moz-placeholder {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+input:focus :-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.login-form {
+    min-height: 10rem;
+    margin: auto;
+    max-width: 50%;
+    padding: 0.5rem;
+}
+
+.login-text {
+    color: white;
+    font-size: 1.5rem;
+    margin: 0 auto;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.login-text .fa-stack-1x {
+    color: black;
+}
+
+.login-username,
+.login-password {
+    background: transparent;
+    border: 0 solid;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: white;
+    display: block;
+    margin: 1rem;
+    padding: 0.5rem;
+    transition: 250ms background ease-in;
+    width: calc(100% - 3rem);
+}
+
+.login-username:focus,
+.login-password:focus {
+    background: white;
+    color: black;
+    transition: 250ms background ease-in;
+}
+
+.login-forgot-pass {
+    bottom: 0;
+    color: white;
+    cursor: pointer;
+    display: block;
+    font-size: 75%;
+    left: 0;
+    opacity: 0.6;
+    padding: 0.5rem;
+    text-align: center;
+    width: 100%;
+}
+
+.login-new-user {
+    bottom: 1;
+    color: white;
+    cursor: pointer;
+    display: block;
+    font-size: 75%;
+    left: 0;
+    opacity: 0.6;
+    padding: 0.5rem;
+    text-align: center;
+    width: 100%;
+}
+
+.login-new-suer:hover {
+    opacity: 1;
+}
+
+.login-forgot-pass:hover {
+    opacity: 1;
+}
+
+.login-submit {
+    border: 1px solid white;
+    background: transparent;
+    color: white;
+    display: block;
+    margin: 1rem auto;
+    min-width: 1px;
+    padding: 0.25rem;
+    transition: 250ms background ease-in;
+}
+
+.login-submit:hover,
+.login-submit:focus {
+    background: white;
+    color: black;
+    transition: 250ms background ease-in;
+}
+
+[class*=underlay] {
+    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+#mensajeError,
+#mensajeError1,
+#mensajeErrorPass,
+#mensajeErrorMail {
+    color: #ff0000;
+    font-family: "Josefine Sans, cursive";
+    font-size: 1rem;
+    background-color: #333333d0;
+}
+
+#formulario {
+    margin: 2vh;
+    padding: 2vh;
+    justify-content: center;
+}
