--- a/Restaurante/Polls/templates/Polls/login.html
+++ b/Restaurante/Polls/templates/Polls/login.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="{% static 'polls/css/style.css' %}">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-    <title>Registrarse</title>
+    <title>Iniciar Sesión</title>
 </head>
 <body>
     <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
@@ -54,29 +55,27 @@
         <section>
             <main>
                 <div class="container">
-                  <form class="login-form" id="creaUsuario" method="POST">
+                  <form class="login-form" method="POST">
                     {%csrf_token%}
-                    {{form.as_p}}
-                    <button type="submit" name="create" value="Crear Usuario" class="formulario__btn id="crearUsuario" />Iniciar Sesión</button>
-                    <p class="login-text" id="mensajeError1">Usuario invalido</p>
-                    <p class="login-text" id="mensajeErrorPass"> Las contraseñas no coinciden</p>
-                </form>
-                <a href="{% url 'login'%}" class="login-new-user"> Ya tienes usuario? Log-in</a>
-                <br>
-                  <div class="g-sign-in-button">
-                    <div class="content-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="{% static 'Polls/img/icons8-logo-de-google-48.png' %}">
-                        </div>
-                        <span class='text-container'>
+                    {{form.usuarioN}} {{form.passwordN}}
+                    <input type="submit" name="loginBTN" value="Login" class="login-submit" id="loginBTN" />
+                    <p class="login-text" id="mensajeError">Usuario o contraseña incorrectos</p>
+                    <div class="g-sign-in-button">
+                      <div class="content-wrapper">
+                          <div class="logo-wrapper">
+                              <img src="{% static 'Polls/img/icons8-logo-de-google-48.png' %}">
+                          </div>
+                          <span class='text-container'>
                             <span><a href="{% provider_login_url 'google' %}">Iniciar Sesion</a></span> 
-                    </span>
+                        </span>
+                        <a href="{% url 'Recuperar'%}" class="login-forgot-pass">Olvidaste contraseña?</a>
+                        <a href="{% url 'Registrar'%}" class="login-new-user"> Crear nuevo usuario</a>
+                      </div>
                     </div>
                   </div>
-                </div>
-                </div>    
-                </main>	
+            </main>	
         </section>
+        
     <section>
         <br>
         <footer>
@@ -91,8 +90,8 @@
           </nav>
       </footer>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{%static 'Polls/js/scripts.js'%}"></script> 
+    <script type="text/javascript" src="{%static 'Polls/js/scripts.js'%}"></script>    
 </body>
 </html>
